--- a/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
+++ b/translations/kangyur/translations/039-002_toh46-the_teaching_on_clearing_the_boundless_gates.xml
@@ -39,7 +39,7 @@
                 <sponsor ref="sponsors.xml#sponsor-22">Qiang Li (李强) and Ya Wen (文雅)</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.8 <date>2021</date>
+                <edition>v 1.0.9 <date>2021</date>
                 </edition>
             </editionStmt>
 
@@ -76,7 +76,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-11T11:01:05.465Z" user="admin">11/07/2022 11:01:05</note>
+                <note type="lastUpdated" date-time="2022-09-24T23:31:54.479Z" user="admin">24/09/2022 23:31:54</note>
                 <note type="updated" update="text-version" value="v 0.1.0" date-time="2019-12-03T07:46:54.268Z" user="andreas">v 0.1.0</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2019-12-03T07:47:20.13Z" user="andreas">2.e</note>
                 <note type="updated" update="translation-status" value="2.d" date-time="2019-12-09T09:32:19.448Z" user="andreas">2.d</note>
@@ -103,6 +103,7 @@
                 <note type="updated" update="text-version" value="1.0.6" date-time="2022-06-29T15:55:43.271Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.7" date-time="2022-07-10T12:56:22.643Z" user="john">Harmonization of trailer and colophon.</note>
                 <note type="updated" update="text-version" value="1.0.8" date-time="2022-07-11T11:01:01.633Z" user="john">Harmonization of trailer and colophon</note>
+                <note type="updated" update="text-version" value="1.0.9" date-time="2022-09-24T23:31:50.466Z" user="andre">Update to the glossary</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -4577,17 +4578,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="person" xml:id="UT22084-039-002-418">
+                        <gloss xml:id="UT22084-039-002-418" type="person" mode="match">
                             <term>Paltsek Rakṣita</term>
-                            <term xml:lang="Bo-Ltn">dpal brtsegs ra k+shi ta </term>
-                            <term xml:lang="bo">དཔལ་བརྩེགས་ར་ཀྴི་ཏ།</term>
+                            <term xml:lang="Bo-Ltn">dpal brtsegs rak+Shi ta</term>
+                            <term xml:lang="bo">དཔལ་བརྩེགས་རཀྵི་ཏ།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">One of the greatest Tibetan translators, most
-                                commonly known as Kawa Paltsek. Kawa Paltsek lived in the eighth to
-                                ninth century. Translating numerous canonical texts, both sūtra and
-                                tantra, he became one of the most active translators of his time. He
-                                was one of the initial seven Tibetans to be ordained during the
-                                founding of the first Tibetan monastery of Samyé.</term>
+                            <term type="definition">One of the greatest Tibetan translators, most commonly known as Kawa Paltsek. Kawa Paltsek lived in the eighth to ninth century. Translating numerous canonical texts, both sūtra and tantra, he became one of the most active translators of his time. He was one of the initial seven Tibetans to be ordained during the founding of the first Tibetan monastery of Samyé.</term>
                         </gloss>
                     </item>
                     <item>
