--- a/translations/kangyur/translations/063-006_toh225-the_sutra_on_the_threefold_going_for_refuge.xml
+++ b/translations/kangyur/translations/063-006_toh225-the_sutra_on_the_threefold_going_for_refuge.xml
@@ -26,7 +26,7 @@
                 <editor role="finalReviewer" ref="contributors.xml#person-250">Rory Lindsay, Dr.</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.4 <date>2021</date>
+                <edition>v 1.0.5 <date>2021</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -63,7 +63,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-11-22T16:09:22.166Z" user="admin">22/11/2021 16:09:22</note>
+                <note type="lastUpdated" date-time="2022-09-24T23:40:01.428Z" user="admin">24/09/2022 23:40:01</note>
                 <note type="updated" update="translation-status" value="3" date-time="2020-09-14T06:37:39.325Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-09-14T06:37:39.325Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2020-09-14T06:38:02.194Z" user="line-tofte">Auto
@@ -91,6 +91,7 @@
             
     <note type="updated" update="text-version" value="1.0.3" date-time="2021-02-02T10:58:16.324Z" user="mike">Andreas' corrections added</note>
     <note type="updated" update="text-version" value="1.0.4" date-time="2021-11-22T16:09:18.3Z" user="celso">added references to Peter Skillings 2021 anthology</note>
+    <note type="updated" update="text-version" value="1.0.5" date-time="2022-09-24T23:39:57.419Z" user="andre">Update to the glossary</note>
 </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -372,8 +373,7 @@
                             <term xml:lang="Bo-Ltn">dpal brtsegs </term>
                             <term xml:lang="bo">དཔལ་བརྩེགས།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">
-                                <term type="ignore">Paltsek</term>, from the
+                            <!--<term type="definition"><term type="ignore">Paltsek</term>, from the
                                 village of Kawa north of Lhasa, was one of Tibet’s preeminent
                                 translators. He was one of the first seven Tibetans to be ordained
                                 by Śāntarakṣita and is counted as one of Guru Rinpoche’s twenty-five
@@ -387,7 +387,7 @@
                                 catalog translated works for the first two of three imperial
                                 catalogs (the <title xml:lang="Bo-Ltn">ldan kar ma</title> and
                                     <title xml:lang="Bo-Ltn">bsam yas mchims phu ma</title>
-                                catalogs).</term>
+                                catalogs).</term>-->
                         </gloss>
                     </item>
                     <item>
@@ -417,7 +417,7 @@
                             <term xml:lang="Bo-Ltn">sarba dz+nyA de ba </term>
                             <term xml:lang="bo">སརྦ་ཛྙཱ་དེ་བ།</term>
                             <term xml:lang="Sa-Ltn">Sarvajñādeva</term>
-                            <term type="definition">According to traditional accounts, the Kashmiri
+                            <!--<term type="definition">According to traditional accounts, the Kashmiri
                                 abbot <term type="ignore">Sarvajñādeva</term> was among the “one
                                 hundred” paṇḍitas invited by Trisong Detsen (r. 755–797/800) to
                                 assist with the translation of the Buddhist scriptures into Tibetan.
@@ -427,7 +427,7 @@
                                     <title xml:lang="Sa-Ltn">Suhṛllekha</title>. Much of this work
                                 was likely carried out in the first years of the ninth century and
                                 may have continued into the reign of Ralpachen, who ascended the
-                                throne in 815 and died in 838 or 841 <hi rend="small-caps">ce</hi>.</term>
+                                throne in 815 and died in 838 or 841 <hi rend="small-caps">ce</hi>.</term>-->
                         </gloss>
                     </item>
                     <item>
