--- a/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
+++ b/translations/kangyur/placeholders/063-010_toh229-the_sutra_on_the_tathagatas_deliberations.xml
@@ -18,11 +18,11 @@
                 <sponsor ref="sponsors.xml#sponsor-47">马珂，王晓娟</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.10 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.c">
+            <publicationStmt status="2.b">
                 <idno xml:id="UT22084-063-010"/>
                 <date/>
             </publicationStmt>
@@ -38,7 +38,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-08-29T13:17:17.048Z" user="admin">29/08/2022 13:17:17</note>
+                <note type="lastUpdated" date-time="2022-09-26T07:59:14.294Z" user="admin">26/09/2022 07:59:14</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2019-06-27T14:16:17.494Z" user="john">2.g</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-27T13:01:38.603Z" user="mike">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:01:38.603Z" user="mike">2.h</note>
@@ -54,6 +54,8 @@
                 <note type="updated" update="text-version" value="0.0.8" date-time="2022-08-03T08:33:19.115Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="translation-status" value="2.c" date-time="2022-08-29T13:17:10.956Z" user="line-tofte">2.c</note>
                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-08-29T13:17:10.956Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.b" date-time="2022-09-26T07:59:05.498Z" user="line-tofte">2.b</note>
+                <note type="updated" update="text-version" value="0.0.10" date-time="2022-09-26T07:59:05.498Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
