--- a/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
+++ b/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
@@ -6,43 +6,36 @@
                         <titleStmt>
                                 <title type="mainTitle" xml:lang="en">Evaluating Whether Progress is Certain or Uncertain</title>
                                 <title type="mainTitle" xml:lang="Sa-Ltn">Niyatāniyata­gati­mudrāvatāra</title>
+                                <title type="mainTitle" xml:lang="bo">ངེས་པ་དང་མ་ངེས་པར་འགྲོ་བའི་ཕྱག་རྒྱ་ལ་འཇུག་པ།</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">nges pa dang ma nges par
                                         ’gro ba’i phyag rgya la ’jug pa</title>
-                                <title type="mainTitle" xml:lang="bo">ངེས་པ་དང་མ་ངེས་པར་འགྲོ་བའི་ཕྱག་རྒྱ་ལ་འཇུག་པ།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa nges pa dang ma
-                                        nges par ’gro ba’i phyag rgya la ’jug pa zhes bya ba’i theg
-                                        pa chen po’i mdo</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ངེས་པ་དང་མ་ངེས་པར་འགྲོ་བའི་ཕྱག་རྒྱ་ལ་འཇུག་པ་ཞེས་བྱ་བའི་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                                 <title type="longTitle" xml:lang="en">The Noble Mahāyāna Sūtra
                                         “Evaluating Whether Progress is Certain or Uncertain”</title>
                                 <title type="longTitle" xml:lang="Sa-Ltn">Niyatāniyata­gati­mudrāvatāranāma­mahāyāna­sūtra</title>
-                                <title type="otherTitle" xml:lang="Sa-Ltn">Ārya­niyatāniyata­gati­mudrāvatāra­nāma­mahāyāna­sūtra</title>
+                                <title type="longTitle" xml:lang="bo">འཕགས་པ་ངེས་པ་དང་མ་ངེས་པར་འགྲོ་བའི་ཕྱག་རྒྱ་ལ་འཇུག་པ་ཞེས་བྱ་བའི་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
+                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa nges pa dang ma
+                                        nges par ’gro ba’i phyag rgya la ’jug pa zhes bya ba’i theg
+                                        pa chen po’i mdo</title>
                                 <title type="otherTitle" xml:lang="en">Evaluating Whether the Bodhisattvas’ Progress Is Certain or Uncertain</title>
+                                <title type="otherTitle" xml:lang="Sa-Ltn">Ārya­niyatāniyata­gati­mudrāvatāra­nāma­mahāyāna­sūtra</title>
                                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa’
                                         rnams kyi nges pa dang ma nges par ’gro ba’i phyag rgya la
                                         ’jug pa</title>
                                 <author role="translatorMain" ref="eft:team-11">Translated by David
                                         Jackson<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
-                                <author role="translatorEng" ref="eft:person-14">David
-                                        Jackson</author>
-                                <editor role="externalReviewer" ref="eft:person-262">David
-                                        Higgins</editor>
-                                <editor role="copyEditor" ref="eft:person-249">Konchog
-                                        Norbu</editor>
-                                <consultant role="projectManager" ref="eft:person-14">David
-                                        Jackson</consultant>
-                                <editor role="projectEditor" ref="eft:person-289">Nathaniel
-                                        Rich</editor>
-                                <editor role="copyEditor" ref="eft:person-252">Dion
-                                        Blundell</editor>
-                                <editor role="projectEditor" ref="eft:person-250">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer
-                                        Dhingra</editor>
+                                <author role="translatorEng" ref="eft:person-14">David Jackson</author>
+                                <editor role="externalReviewer" ref="eft:person-262">David Higgins</editor>
+                                <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
+                                <consultant role="projectManager" ref="eft:person-14">David Jackson</consultant>
+                                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                                <editor role="copyEditor" ref="eft:person-252">Dion Blundell</editor>
+                                <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
+                                <editor role="TEImarkupEditor" ref="eft:person-391">Sameer Dhingra</editor>
+                                <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -86,8 +79,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-06-10T06:56:30.422Z" user="admin">10/06/2022 06:56:30</note>
-
+                                <note type="lastUpdated" date-time="2022-09-26T12:28:31.562Z" user="admin">26/09/2022 12:28:31</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:33.326Z" user="mike">2.d</note>
@@ -106,12 +98,9 @@
                                 <note type="updated" update="text-version" value="0.0.6" date-time="2021-10-26T14:25:51.948Z" user="line-tofte">Auto
                                         (update-contributors)</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2021-11-26T09:18:02.417Z" user="line-tofte">2.d</note>
-
                                 <note type="updated" update="text-version" value="0.0.7" date-time="2021-11-26T09:18:02.417Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
-
                                 <note type="updated" update="translation-status" value="2.c" date-time="2021-12-22T08:31:08.162Z" user="line-tofte">2.c</note>
-
                                 <note type="updated" update="text-version" value="0.0.8" date-time="2021-12-22T08:31:08.162Z" user="line-tofte">Auto
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.9" date-time="2022-04-13T07:26:12.695Z" user="line-tofte">Auto
@@ -124,8 +113,9 @@
                                         (update-publication-status)</note>
                                 <note type="updated" update="text-version" value="0.0.12" date-time="2022-05-12T09:01:53.778Z" user="line-tofte">Auto
                                         (update-contributors)</note>
-                            <note type="updated" update="translation-status" value="2" date-time="2022-06-10T06:56:22.775Z" user="line-tofte">2</note>
-                            <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-10T06:56:22.775Z" user="line-tofte">Auto (update-publication-status)</note>
+                                <note type="updated" update="translation-status" value="2" date-time="2022-06-10T06:56:22.775Z" user="line-tofte">2</note>
+                                <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-10T06:56:22.775Z" user="line-tofte">Auto (update-publication-status)</note>
+                            <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-26T12:28:23.452Z" user="line-tofte">Auto (update-contributors)</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
