--- a/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-006_toh691,897-the_incantation_of_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -14,11 +14,12 @@
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date/>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-093-006"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh691" type="text">
@@ -41,9 +42,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:43:40.961Z" user="admin">26/07/2022 07:43:40</note>
+                <note type="lastUpdated" date-time="2022-09-27T13:59:55.437Z" user="admin">27/09/2022 13:59:55</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:43:01.139Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-07-26T07:43:38.955Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-09-27T13:59:49.34Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.3" date-time="2022-09-27T13:59:49.34Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
