--- a/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-005_toh690-detailed_procedures_for_the_thousandarmed_thousandeyed_avalokitesvara.xml
@@ -13,11 +13,12 @@
                 <sponsor ref="sponsors.xml#sponsor-2">George Gu, May E Ho Gu, Likai Gu, Lilian Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date/>
+                <edition>v 0.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt status="4">
                 <idno xml:id="UT22084-093-005"/>
+                <date/>
             </publicationStmt>
             <sourceDesc>
                 <bibl key="toh690" type="text">
@@ -31,8 +32,10 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T07:42:18.576Z" user="admin">26/07/2022 07:42:18</note>
+                <note type="lastUpdated" date-time="2022-09-27T14:00:47.312Z" user="admin">27/09/2022 14:00:47</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2022-07-26T07:42:16.581Z" user="cabie-sim">Auto (update-titles)</note>
+                <note type="updated" update="translation-status" value="4" date-time="2022-09-27T14:00:41.19Z" user="line-tofte">4</note>
+                <note type="updated" update="text-version" value="0.0.2" date-time="2022-09-27T14:00:41.19Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
