--- a/translations/kangyur/placeholders/064-006_toh236-the_tenth_chapter_from_amongst_the_ten_thousand_chapters_of_the_sutra_on_the_heroic_way.xml
+++ b/translations/kangyur/placeholders/064-006_toh236-the_tenth_chapter_from_amongst_the_ten_thousand_chapters_of_the_sutra_on_the_heroic_way.xml
@@ -4,19 +4,22 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dpa' bar 'gro ba'i mdo le'u stong phrag bcu pa las le'u bcu pa/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">(no Sanskrit title, translated from part of Chinese Śūraṃgamasūtra)</title>
                 <title type="mainTitle" xml:lang="en">The Tenth Chapter from Amongst the Ten Thousand Chapters of the Sūtra on the Heroic Way</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das kyi gtsug gtor chen po de bzhin gshegs pa'i gsang ba sgrub pa'i don mngon par thob pa'i rgyu byang chub sems dpa' thams cad kyi spyod pa dpa' bar 'gro ba'i mdo le'u stong phrag bcu pa las le'u bcu pa</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">(no Sanskrit title, translated from part of Chinese Śūraṃgamasūtra)</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dpa' bar 'gro ba'i mdo le'u stong phrag bcu pa las le'u bcu pa/</title>
                 <title type="otherTitle" xml:lang="en">The Tenth Chapter from Amongst the Ten Thousand Chapters of the Sūtra on the Heroic Way of Practice of all the Bodhisattvas which is the Cause for Attaining the Goal of Realizing the Secrets of the Tathāgatas, the Great Diadem of the Blessed Ones</title>
                 <title type="otherTitle" xml:lang="en">(A full Tibetan translation from Chinese of the Śūraṃgamasūtra was made in the 18th century and added to the Narthang Kangyur as mdo sde, ki.)</title>
+                <title type="otherTitle" xml:lang="Bo-Ltn">bcom ldan 'das kyi gtsug gtor chen po de bzhin gshegs pa'i gsang ba sgrub pa'i don mngon par thob pa'i rgyu byang chub sems dpa' thams cad kyi spyod pa dpa' bar 'gro ba'i mdo le'u stong phrag bcu pa las le'u bcu pa</title>
+                <author role="translatorMain" ref="contributors.xml#team-67"/>
+                <author role="translatorEng" ref="contributors.xml#person-204">ErdeneBaatar Erdene-Ochir</author>
+                <sponsor ref="eft:sponsor-219">anonymous</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.11 <date>2020</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="4">
+            <publicationStmt status="3">
                 <idno xml:id="UT22084-064-006"/>
                 <date/>
             </publicationStmt>
@@ -32,7 +35,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2021-07-23T11:18:55.594Z" user="admin">23/07/2021 11:18:55</note>
+                <note type="lastUpdated" date-time="2021-12-24T05:38:12.001Z" user="cabie-sim">24/12/2021 05:38:12</note>
 <note type="updated" update="text-version" value="0.0.1" date-time="2020-01-12T19:39:15.473Z" user="john">0.0.1</note>
 <note type="updated" update="translation-status" value="1" date-time="2020-01-12T19:39:15.473Z" user="john">1</note>
 <note type="updated" update="translation-status" value="0" date-time="2020-01-12T19:39:33.331Z" user="john"/>
@@ -42,7 +45,14 @@
     <note type="updated" update="text-version" value="0.0.4" date-time="2021-07-23T11:15:45.431Z" user="john">Auto (update-titles)</note>
     <note type="updated" update="text-version" value="0.0.5" date-time="2021-07-23T11:16:16.067Z" user="john">Auto (update-titles)</note>
     <note type="updated" update="text-version" value="0.0.6" date-time="2021-07-23T11:18:52.431Z" user="john">0.0.6</note>
-            </notesStmt>
+    <note type="updated" update="translation-status" value="3" date-time="2021-09-27T12:03:34.981Z" user="line-tofte">3</note>
+    <note type="updated" update="text-version" value="0.0.7" date-time="2021-09-27T12:03:34.981Z" user="line-tofte">Auto (update-publication-status)</note>
+    <note type="updated" update="text-version" value="0.0.8" date-time="2021-09-27T12:03:59.666Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.9" date-time="2021-09-27T12:04:14.238Z" user="line-tofte">Auto (update-contributors)</note>
+    <note type="updated" update="text-version" value="0.0.10" date-time="2021-12-24T05:20:55.121Z" user="cabie-sim">Auto (update-sponsorship)</note>
+
+    <note type="updated" update="text-version" value="0.0.11" date-time="2021-12-24T05:38:07.88Z" user="cabie-sim">Auto (update-sponsorship)</note>
+</notesStmt>
         </fileDesc>
     </teiHeader>
     <text>
