--- a/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-038_toh594-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -28,7 +28,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.1 <date>2022</date>
+                <edition>v 1.2.2 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-29T16:03:57.756Z" user="admin">29/09/2022 16:03:57</note>
+        <note type="lastUpdated" date-time="2022-09-29T16:11:11.18Z" user="admin">29/09/2022 16:11:11</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-12-10T12:56:19.606Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-16T08:20:54.493Z" user="line-tofte">Auto (update-contributors)</note>
@@ -106,6 +106,7 @@
           <note type="updated" update="translation-status" value="1.a" date-time="2022-09-19T09:41:41.913Z" user="sameer">1.a</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:41:41.913Z" user="sameer">Updated dhāraṇī to match the Degé, added final sections of the introduction and upadated notes.</note>
           <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T16:03:53.513Z" user="john">Additional sections added to introduction, notes, and bibliography as in the other texts of the group.</note>
+          <note type="updated" update="text-version" value="1.2.2" date-time="2022-09-29T16:11:06.845Z" user="john">Adjustment to colophon.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -1184,7 +1185,7 @@
           <head type="colophon" tid="96">Colophon</head>
           <milestone unit="chunk" xml:id="UT22084-090-038-155"/>
           <p tid="97">It was translated, edited, and finalized by the scholar Dharmasena and by
-            Bari, the monk and translator from Kham.</p>
+            Khampa Lotsāwa, the monk Bari.</p>
         </div>
       </div>
     </body>
