--- a/translations/kangyur/translations/094-013_toh736,995-the_incantation_of_parnasavari.xml
+++ b/translations/kangyur/translations/094-013_toh736,995-the_incantation_of_parnasavari.xml
@@ -32,7 +32,7 @@
     <editor role="finalReviewer" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.13 <date>2022</date>
+                <edition>v 1.1.14 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -77,7 +77,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-11T12:15:24.289Z" user="admin">11/04/2022 12:15:24</note>
+                <note type="lastUpdated" date-time="2022-09-29T18:41:40.416Z" user="admin">29/09/2022 18:41:40</note>
                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-14T12:42:32.2Z" user="line-tofte">0.0.1</note>
                 <note type="updated" update="translation-status" value="2.e" date-time="2020-04-14T12:42:32.2Z" user="line-tofte">2.e</note>
                 <note type="updated" update="translation-status" value="2.b" date-time="2020-04-15T09:53:04.257Z" user="line-tofte">2.b</note>
@@ -99,7 +99,7 @@
     <note type="updated" update="text-version" value="1.1.9" date-time="2020-11-25T15:59:54.666Z" user="celso">Updated pending links</note>
     <note type="updated" update="text-version" value="1.1.10" date-time="2020-12-11T14:06:50.919Z" user="admin">Auto (TEI migration 2.1.5)</note>
     <note type="updated" update="text-version" value="1.1.11" date-time="2021-03-17T20:01:49.836Z" user="celso">@key added to note to create alternate message regarding vol 100+ text</note>
-    <note type="updated" update="text-version" value="1.1.12" date-time="2021-09-24T13:48:59.425Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-04-11T12:15:20.477Z" user="laura">Bibliography update</note>
+    <note type="updated" update="text-version" value="1.1.12" date-time="2021-09-24T13:48:59.425Z" user="celso">updated "incantation" to "dhāraṇī"</note>    <note type="updated" update="text-version" value="1.1.13" date-time="2022-04-11T12:15:20.477Z" user="laura">Bibliography update</note>    <note type="updated" update="text-version" value="1.1.14" date-time="2022-09-29T18:41:36.148Z" user="john">Glossary entry modified.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -679,7 +679,8 @@
                             <term xml:lang="Bo-Ltn">khams pa lo tsA wa ba ri chos grags </term>
                             <term xml:lang="bo">ཁམས་པ་ལོ་ཙཱ་ཝ་བ་རི་ཆོས་གྲགས།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">Ca. eleventh century; a Tibetan translator who translated 
+                            <term type="definition">1040–11; the Tibetan translator and second throne-holding Sakya heirarch, also 
+                                known as Bari Lotsāwa or Rinchen Drak (<foreign xml:lang="Bo-Ltn">rin chen grags</foreign>) who, among many other texts, translated 
                                 ninety-three sādhanas that are grouped together under his name in the Tibetan canon.</term>
                         </gloss>
                     </item>
