--- a/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
+++ b/translations/kangyur/translations/090-040_toh596-the_incantation_and_practice_of_usnisavijaya.xml
@@ -30,7 +30,7 @@
         <sponsor ref="sponsors.xml#sponsor-2">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.1 <date>2022</date>
+                <edition>v 1.2.1 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -64,7 +64,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2022-09-19T09:46:41.531Z" user="admin">19/09/2022 09:46:41</note>
+        <note type="lastUpdated" date-time="2022-09-29T19:04:10.437Z" user="admin">29/09/2022 19:04:10</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
         <note type="updated" update="translation-status" value="4" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">4</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-10T12:57:42.226Z" user="line-tofte">Auto
@@ -100,6 +100,7 @@
         <note type="updated" update="translation-status" value="1.a" date-time="2022-07-15T10:34:32.228Z" user="sameer">1.a</note>
         <note type="updated" update="text-version" value="1.0.0" date-time="2022-07-15T10:34:32.228Z" user="sameer">First published version</note>
           <note type="updated" update="text-version" value="1.1.1" date-time="2022-09-19T09:46:37.48Z" user="sameer">Updated dhāraṇī to match the Degé reading, added final sections of the introduction and updated notes.</note>
+          <note type="updated" update="text-version" value="1.2.1" date-time="2022-09-29T19:04:06.298Z" user="john">Material added to introduction, notes, and bibliography in line with the other texts in this group.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -276,20 +277,55 @@
           <p tid="17">The question of what, or <emph>who</emph>, exactly, Uṣṇīṣavijayā is is a
             complex one that cannot be clearly answered here. In short, like a number of uṣṇīṣa
             deities, she is sometimes identified as a protective deity, in this case a goddess,
-            emanated from the Buddha’s uṣṇīṣa. Indeed, in the later Tibetan tradition Uṣṇīṣavijayā
-            is clearly depicted as a goddess and can even appear as one of a group of three
+            emanated from the Buddha’s uṣṇīṣa. Indeed,
+            Uṣṇīṣavijayā is clearly depicted as a goddess in a number of short sādhanas
+            included in Indian anthologies such as the <title xml:lang="Sa-Ltn">Sādhanamāla</title>,
+            compiled from the works of many authors probably during the period of the
+            Pāla kings (eighth to twelfth century).<note place="end" xml:id="UT22084-090-040-119">See Bhattacharyya 1928, vol. 2.</note> 
+            Three closely similar sādhanas of a three-faced, eight armed form of the goddess are included in the 
+            Tengyur, one in each of the three related anthologies translated from the Indian collections into Tibetan in the eleventh to fourteenth centuries 
+            respectively.<note place="end" xml:id="UT22084-090-040-120">The three are Toh 3377, 3248, and 3580, translated respectively by 
+              Khampa Lotsāwa Bari Chödrak (<foreign xml:lang="Bo-Ltn">khams pa lo tsA ba ba ri chos grags</foreign>, 1040–11, possibly the translator of the present text, see <ptr target="#UT22084-090-040-31"/> below); 
+              Patshap Lotsāwa Tsültrim Gyaltsen (<foreign xml:lang="Bo-Ltn">pa tshab lo tsA ba tshul khrims rgyal mtshan</foreign>, twelfth century); and 
+              Yarlung Lotsāwa Trakpa Gyaltsen (<foreign xml:lang="Bo-Ltn">yar klungs lo tsA ba grags pa rgyal mtshan</foreign>, late thirteenth or early fourteenth century).</note>
+            A variety of other forms are depicted or described in Chinese, Japanese, Tibetan, Mongolian, and Kashmiri sources.<note place="end" xml:id="UT22084-090-040-121">See Chandra 1980.</note>
+            In the later Tibetan tradition Uṣṇīṣavijayā can even appear as one of a group of three
             long-life deities along with the Buddha Amitāyus and White Tārā. However, in our text,
             and indeed in all but one of the <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣavijayā</foreign> works in this section of the Kangyur (Toh 598), while the
             dhāraṇī itself uses the feminine vocative form throughout, the name <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣavijayā</foreign> is not rendered into Tibetan in
             the feminine, and the word <foreign xml:lang="Sa-Ltn" type="term">uṣṇīṣavijayā</foreign>
             is not used to refer to anything apart from the name of the dhāraṇī—the dhāraṇī of
               <distinct>the crown victory</distinct>. </p>
+          <milestone unit="chunk" xml:id="UT22084-090-040-122"/>
+          <p tid="50">The range of possible answers to the question of what the name Uṣṇīṣavijayā refers to is enlarged even further by
+            the existence of a group of related texts widely used in Southeast Asia, sharing the Pali 
+            title <title xml:lang="Pi-Ltn">Uṇhissa-vijaya-sutta</title> (or in some cases 
+            simply <title xml:lang="Pi-Ltn">Uṇhissa-vijaya</title>) but found in a 
+            number of different forms, some in Pali but others in Siamese, Lao, Yuon, and Khmer. 
+            Some refer at least briefly to the story of the 
+            god Supratiṣṭhita (Pali Supatiṭṭhita) which, although not included in the present text, is the frame 
+            story of Toh 597 and a secondary narrative element in Toh 594. But instead of the dhāraṇī of the Sanskrit
+            and Tibetan versions these Southeast Asian texts contain a set of verses (<foreign xml:lang="Sa-Ltn">gāthā</foreign>) 
+            to be recited whose content is unrelated to that of the Sanskrit dhāraṇī. The 
+            <foreign xml:lang="Sa-Ltn">gāthā</foreign> are also found alone in several
+            ritual compilations. Even in the vernacular versions, 
+            the verses are written in Pali. In these texts, in their own opening lines, it seems to be the verses themselves that
+            are referred to as the Uṇhissa-vijaya.<note place="end" xml:id="UT22084-090-040-123">These 
+              Southeast Asian texts are not included in the official Pali Canon of the Theravāda tradition and are 
+              unknown in Sri Lanka. In mainland Southeast Asia, however, they are popular in rituals
+              for extending life and in funeral rites. Whether they reflect the diffusion
+              of texts and practices directly from India prior to the relatively recent evolution
+              of Theravāda orthodoxy, or were transmitted via Chinese along with Chinese migrations
+              and cultural influence in the region, remains an open question. For
+              a detailed study of these texts and their possible origins, see Cicuzza (ed.) 2018.</note>
+                    </p>
+          <lb/>
           <milestone unit="chunk" xml:id="UT22084-090-040-31"/>
-          <p tid="18">The present text lacks a translator’s colophon. However, as noted above it is
+          <p tid="51">The present text lacks a translator’s colophon. However, as noted above it is
             made up of content that is almost entirely parallel with Toh 594, with which it also
             shares the same title. That work <emph>does</emph> have a translator’s colophon
             indicating that it was translated into Tibetan by the Indian scholar Dharmasena and the
-            Tibetan translator Bari, and it is therefore an eleventh- or twelfth-century
+            Tibetan Bari Lotsāwa, and it is therefore an eleventh- or twelfth-century
             translation. However, the imperial Phangthangma catalog lists one <title xml:lang="Sa-Ltn">Uṣṇīṣavijayā-dhāraṇī-vidhisahitā</title>, which, even if not the
             same as the present text, is certainly a work of a similar type.<note place="end" xml:id="UT22084-090-040-32"> Phangthangma (2003), p. 23. While the phrase <foreign xml:lang="Bo-Ltn" type="quote">cho ga dang bcas pa</foreign> (Skt. <foreign xml:lang="Sa-Ltn" type="term">vidhisahitā</foreign>) is functionally equivalent to
               the phrase <foreign xml:lang="Bo-Ltn" type="quote">rtog pa dang bcas pa</foreign>
@@ -602,8 +638,17 @@
         </div>
         <div type="section" xml:id="UT22084-090-040-listBibl-3">
           <head type="section" tid="43">Secondary Sources</head>
-          <bibl xml:id="UT22084-090-040-64">Bühnemann, Gudrun. “A <foreign xml:lang="Sa-Ltn" type="term">Dhāraṇī</foreign> for Each Day of the Week: The <foreign xml:lang="Sa-Ltn" type="term">Saptavāra</foreign> Tradition of the Newar Buddhists.” <title xml:lang="en">Bulletin of SOAS</title> 77, no. 1 (2014): 119–36. </bibl>
-          <bibl xml:id="UT22084-090-040-65">Chou, Yi-liang. “Tantrism in China.” <title xml:lang="en">Harvard Journal of Asiatic Studies</title> 8, no. 3/4 (March 1945):
+          <bibl xml:id="UT22084-090-040-124">Bhattacharyya, Benoytosh (ed). <title xml:lang="en">Sādhanamāla</title>. 2 vols. 
+            Baroda: Oriental Institute, 1925–28.</bibl>
+           <bibl xml:id="UT22084-090-040-64">Bühnemann, Gudrun. “A <foreign xml:lang="Sa-Ltn" type="term">Dhāraṇī</foreign> for Each Day of the Week: The <foreign xml:lang="Sa-Ltn" type="term">Saptavāra</foreign> Tradition of the Newar Buddhists.” <title xml:lang="en">Bulletin of SOAS</title> 77, no. 1 (2014): 119–36. </bibl>
+          <bibl xml:id="UT22084-090-040-125">Chandra, Lokesh. “Comparative Iconography of the Goddess Uṣṇīṣavijāyā.” 
+            In <title xml:lang="en">Acta Orientalia Academiae Scientiarum Hungaricae</title>, vol. 34, nos. 1–3, pp. 125–37. 
+            Budapest: Akadémiai Kiadó, 1980.</bibl>
+          <bibl xml:id="UT22084-090-040-126">Cicuzza, Claudio (ed). <title xml:lang="en">Katā me rakkhā, katā me parittā:
+            Protecting the protective texts and manuscripts</title>. Proceedings of the Second International Pali 
+            Studies Week, Paris 2016. Materials for the Study of the Tripiṭaka Volume 14. Bangkok 
+            and Lumbini: Fragile Palm Leaves Foundation and Lumbini International Research Institute, 2018.</bibl>
+         <bibl xml:id="UT22084-090-040-65">Chou, Yi-liang. “Tantrism in China.” <title xml:lang="en">Harvard Journal of Asiatic Studies</title> 8, no. 3/4 (March 1945):
             241–332. </bibl>
           <bibl xml:id="UT22084-090-040-66">Copp, Paul. “Voice, Dust, Shadow, Stone: The Makings of
             Spells in Medieval Chinese Buddhism.” PhD diss., Princeton University, 2005.</bibl>
