--- a/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
+++ b/translations/kangyur/translations/062-002_toh202-evaluating_whether_progress_is_certain_or_uncertain.xml
@@ -35,7 +35,7 @@
                                 <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2022</date>
+                <edition>v 1.0.2 <date>2022</date>
                 </edition>
             </editionStmt>
 
@@ -79,7 +79,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2022-09-29T12:36:39.741Z" user="admin">29/09/2022 12:36:39</note>
+                                <note type="lastUpdated" date-time="2022-09-30T14:41:00.957Z" user="admin">30/09/2022 14:41:00</note>
                                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated
                                         version increment</note>
                                 <note type="updated" update="translation-status" value="2.d" date-time="2020-01-28T06:17:33.326Z" user="mike">2.d</note>
@@ -119,6 +119,7 @@
                             <note type="updated" update="translation-status" value="1.a" date-time="2022-09-29T02:12:43.16Z" user="sameer">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2022-09-29T02:12:43.16Z" user="sameer">First published version</note>
                             <note type="updated" update="text-version" value="1.0.1" date-time="2022-09-29T12:36:35.606Z" user="john">Some changes to make a number of slightly strange English phrases read more naturally.</note>
+                            <note type="updated" update="text-version" value="1.0.2" date-time="2022-09-30T14:40:56.958Z" user="andre">Glossary status updated, now active in CG</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -1675,7 +1676,7 @@
                                                 1925; 2nd ed. Tokyo: 1962.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
 
                                         <item>
@@ -2090,43 +2091,13 @@
                                                 </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-062-002-188">
-                                                  <term>person of the eighth level</term>
-                                                  <term xml:lang="Bo-Ltn">gang zag brgyad pa </term>
-                                                  <term xml:lang="bo">གང་ཟག་བརྒྱད་པ།</term>
-                                                  <term xml:lang="Sa-Ltn">aṣṭamaka</term>
-                                                  <term type="definition">A person who is eight
-                                                  steps away in the arc of their development from
-                                                  becoming an arhat (Tib. <foreign xml:lang="Bo-Ltn" type="term">dgra bcom pa</foreign>). Specifically,
-                                                  this term refers to one who is on the cusp of
-                                                  becoming a stream-enterer (Skt. <foreign xml:lang="Sa-Ltn" type="term">srotaāpanna</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">rgyun du zhugs
-                                                  pa</foreign>) and is the first and lowest stage in
-                                                  a list of eight stages or classes of a noble
-                                                  person (Skt. <foreign xml:lang="Sa-Ltn" type="term">āryapudgala</foreign>). The person at
-                                                  this lowest stage in the sequence is still on the
-                                                  path of seeing (Skt. <foreign xml:lang="Sa-Ltn" type="term">darśanamārga</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">mthong
-                                                  lam</foreign>), and then enters the path of
-                                                  cultivation (Skt. <foreign xml:lang="Sa-Ltn" type="term">bhāvanāmārga</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">sgoms lam</foreign>)
-                                                  upon attaining the next stage, that of a
-                                                  stream-enterer (stage seven). From there they
-                                                  progress through the remaining stages of the
-                                                  śrāvaka path, becoming in turn a
-                                                  once-returner (stages six and five), a
-                                                  non-returner (stages four and three), and an arhat
-                                                  (stages two and one). This same “eighth stage”
-                                                  also appears in set of ten stages (Skt. <foreign xml:lang="Sa-Ltn" type="term">daśabhūmi</foreign>;
-                                                  Tib. <foreign xml:lang="Bo-Ltn" type="term">sa
-                                                  bcu</foreign>) found in Mahāyāna sources, where it
-                                                  is the third step out of the ten. Not to be
-                                                  confused with the ten stages of the bodhisattva’s
-                                                  path, these ten stages mark the progress of one
-                                                  who sequentially follows the paths of a śrāvaka,
-                                                  pratyekabuddha, and then bodhisattva on
-                                                  their way to complete buddhahood. In this set of
-                                                  ten stages, a person “on the eighth stage” is
-                                                  similarly one who is on the cusp of becoming a
-                                                  stream-enterer.</term>
-                                                </gloss>
+                        <gloss xml:id="UT22084-062-002-188" type="term" mode="match">
+                            <term>person of the eighth level</term>
+                            <term xml:lang="Bo-Ltn">gang zag brgyad pa</term>
+                            <term xml:lang="bo">གང་ཟག་བརྒྱད་པ།</term>
+                            <term xml:lang="Sa-Ltn">aṣṭamaka</term>
+                            <term type="definition">A person who is eight steps away in the arc of their development from becoming an arhat (Tib. <foreign xml:lang="Bo-Ltn" type="term">dgra bcom pa</foreign>). Specifically, this term refers to one who is on the cusp of becoming a stream-enterer (Skt. <foreign xml:lang="Sa-Ltn" type="term">srotaāpanna</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">rgyun du zhugs pa</foreign>) and is the first and lowest stage in a list of eight stages or classes of a noble person (Skt. <foreign xml:lang="Sa-Ltn" type="term">āryapudgala</foreign>). The person at this lowest stage in the sequence is still on the path of seeing (Skt. <foreign xml:lang="Sa-Ltn" type="term">darśanamārga</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">mthong lam</foreign>), and then enters the path of cultivation (Skt. <foreign xml:lang="Sa-Ltn" type="term">bhāvanāmārga</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">sgoms lam</foreign>) upon attaining the next stage, that of a stream-enterer (stage seven). From there they progress through the remaining stages of the śrāvaka path, becoming in turn a once-returner (stages six and five), a non-returner (stages four and three), and an arhat (stages two and one). This same “eighth stage” also appears in set of ten stages (Skt. <foreign xml:lang="Sa-Ltn" type="term">daśabhūmi</foreign>; Tib. <foreign xml:lang="Bo-Ltn" type="term">sa bcu</foreign>) found in Mahāyāna sources, where it is the third step out of the ten. Not to be confused with the ten stages of the bodhisattva’s path, these ten stages mark the progress of one who sequentially follows the paths of a śrāvaka, pratyekabuddha, and then bodhisattva on their way to complete buddhahood. In this set of ten stages, a person “on the eighth stage” is similarly one who is on the cusp of becoming a stream-enterer.</term>
+                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-062-002-189">
